@@ -1,0 +1,20 @@
+#!/usr/bin/perl -w
+#$Id: fake_purify 20789 2006-05-24 17:10:53Z wsnyder $
+# DESCRIPTION: Wrapper around g++ to emulate purify, etc, wrappers.
+######################################################################
+#
+# This program is Copyright 2002-2006 by Wilson Snyder.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of either the GNU General Public License or the
+# Perl Artistic License.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#                                                                           
+######################################################################
+
+use strict;
+exec (@ARGV);
